# tensorslim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_whitening_real_data.py  test_whitening_simple.py
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  quality_analysis.py  quality_test.py  real_hf_benchmark.py  speed_comparison.py  speed_results.txt  srht_whitening_benchmark.py  test_improved_quality.py
examples/: basic_svd.py  basic_tests.py  benchmark_comparison.py  compress_bert.py  compress_gpt.py
experiments/: README.md  aggressive_compression_test.py  balanced_compression_test.py  test_activation_quality.py
src/tensorslim/: __init__.py
src/tensorslim/core/: __init__.py  compression.py  layers.py  randomized_svd.py  srht_utils.py  whitening.py
src/tensorslim/integrations/: __init__.py  huggingface.py  pytorch.py
src/tensorslim/models/: __init__.py  base.py  transformer.py
src/tensorslim/utils/: __init__.py  io.py  metrics.py
tests/: __init__.py  test_compression_basic.py  test_compression_comprehensive.py  test_core.py  test_integrations.py  test_models.py  test_srht_whitening.py
